--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <img src="header.jpg" alt="">
-  
+    <img src="logo.gif" alt="">
+    <img src="loader.gif" alt="">
   </body>
 </html>
