--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <title>Proyecto</title>
+    <title>Rama Hostfix</title>
     <style media="screen">
       body {
         margin: 0;
+        border: 10px; solid:red; 
       }
       img {
         max-width: 100%;
