--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Proyecto</title>
+    <title>Rama1</title>
     <style media="screen">
       body {
         margin: 0;
@@ -12,8 +12,7 @@
     </style>
   </head>
   <body>
-    <img src="header.jpg" alt="">
-    <img src="logo.gif" alt="">
-    <img src="loader.gif" alt="">
+    
+    <img src="nueva-version.jpg" alt="">
   </body>
 </html>
